@@ -1,5 +1,6 @@
 package com.ClinicaDeYmid.clients_service.module.service;
 
+import com.ClinicaDeYmid.clients_service.infra.security.UserContextHolder;
 import com.ClinicaDeYmid.clients_service.module.dto.CreateHealthProviderDto;
 import com.ClinicaDeYmid.clients_service.module.entity.Contract;
 import com.ClinicaDeYmid.clients_service.module.entity.HealthProvider;
@@ -13,6 +14,7 @@ import com.ClinicaDeYmid.clients_service.infra.exception.HealthProviderDataAcces
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -26,7 +28,20 @@ public class HeathProviderRecordService {
     private final HealthProviderMapper healthProviderMapper;
     private final ContractRepository contractRepository;
 
+    /**
+     * Obtiene el userId del contexto de seguridad actual
+     */
+    private Long getCurrentUserId() {
+        Long userId = UserContextHolder.getCurrentUserId();
+        if (userId == null) {
+            log.warn("No se pudo obtener userId del contexto de seguridad, usando fallback");
+            return 1L; // Fallback para desarrollo/testing
+        }
+        return userId;
+    }
+
     @Transactional
+    @CacheEvict(value = "health_provider_cache", allEntries = true)
     public HealthProvider createHealthProvider(CreateHealthProviderDto createDto) {
 
         log.info("Iniciando creación de proveedor de salud con NIT: {}",
@@ -40,10 +55,23 @@ public class HeathProviderRecordService {
             validateUniqueNit(healthProvider);
             validateUniqueContractNumbers(healthProvider);
 
+            // Establecer auditoría
+            Long userId = getCurrentUserId();
+            healthProvider.setCreatedBy(userId);
+            healthProvider.setUpdatedBy(userId);
+
+            // Establecer auditoría en contratos
+            if (healthProvider.getContracts() != null) {
+                healthProvider.getContracts().forEach(contract -> {
+                    contract.setCreatedBy(userId);
+                    contract.setUpdatedBy(userId);
+                });
+            }
+
             HealthProvider savedProvider = healthProviderRepository.save(healthProvider);
 
-            log.info("Proveedor de salud creado exitosamente con ID: {} y NIT: {}",
-                    savedProvider.getId(), savedProvider.getNit().getValue());
+            log.info("Proveedor de salud creado exitosamente con ID: {} y NIT: {} por usuario: {}",
+                    savedProvider.getId(), savedProvider.getNit().getValue(), userId);
 
             return savedProvider;
 
@@ -55,41 +83,37 @@ public class HeathProviderRecordService {
 
     private void validateHealthProviderData(HealthProvider healthProvider) {
         if (healthProvider.getNit() == null || healthProvider.getNit().getValue() == null) {
-            throw new HealthProviderValidationException("nit", "null", "El NIT es obligatorio");
+            log.error("Intento de crear proveedor sin NIT");
+            throw new HealthProviderValidationException("El NIT es obligatorio");
         }
 
-        if (healthProvider.getSocialReason() == null || healthProvider.getSocialReason().trim().isEmpty()) {
-            throw new HealthProviderValidationException("socialReason", healthProvider.getSocialReason(),
-                    "La razón social es obligatoria");
+        if (healthProvider.getSocialReason() == null || healthProvider.getSocialReason().isBlank()) {
+            log.error("Intento de crear proveedor sin razón social");
+            throw new HealthProviderValidationException("La razón social es obligatoria");
         }
 
         if (healthProvider.getTypeProvider() == null) {
-            throw new HealthProviderValidationException("typeProvider", "null",
-                    "El tipo de proveedor es obligatorio");
+            log.error("Intento de crear proveedor sin tipo");
+            throw new HealthProviderValidationException("El tipo de proveedor es obligatorio");
         }
     }
 
     private void validateUniqueNit(HealthProvider healthProvider) {
-        if (healthProvider.getNit() != null && healthProvider.getNit().getValue() != null) {
-            healthProviderRepository.findByNit_Value(healthProvider.getNit().getValue())
-                    .ifPresent(existingProvider -> {
-                        log.warn("Intento de crear proveedor con NIT duplicado: {}",
-                                healthProvider.getNit().getValue());
-                        throw new DuplicateHealthProviderNitException(healthProvider.getNit().getValue());
-                    });
+        String nitValue = healthProvider.getNit().getValue();
+
+        if (healthProviderRepository.existsByNit_Value(nitValue)) {
+            log.error("Intento de crear proveedor con NIT duplicado: {}", nitValue);
+            throw new DuplicateHealthProviderNitException(nitValue);
         }
     }
 
     private void validateUniqueContractNumbers(HealthProvider healthProvider) {
         if (healthProvider.getContracts() != null && !healthProvider.getContracts().isEmpty()) {
             for (Contract contract : healthProvider.getContracts()) {
-                if (contract.getContractNumber() != null) {
-                    contractRepository.findByContractNumber(contract.getContractNumber())
-                            .ifPresent(existingContract -> {
-                                log.warn("Intento de crear contrato con número duplicado: {}",
-                                        contract.getContractNumber());
-                                throw new DuplicateContractNumberException(contract.getContractNumber());
-                            });
+                if (contract.getContractNumber() != null &&
+                        contractRepository.existsByContractNumber(contract.getContractNumber())) {
+                    log.error("Intento de crear contrato con número duplicado: {}", contract.getContractNumber());
+                    throw new DuplicateContractNumberException(contract.getContractNumber());
                 }
             }
         }
